syntax = "proto3";

option go_package = "./pb";

enum CloseCode {
    CLOSE_CODE_UNSPECIFIED = 0;
    CLOSE_CODE_NORMAL = 1006;
    CLOSE_CODE_UNAUTHORIZED = 4401;
    CLOSE_CODE_NOTFOUND = 4404;
    CLOSE_CODE_CLIENT_USER_REQUESTED = 4100;
}

enum ClientMessageType {
    CLIENT_MESSAGE_UNSPECIFIED = 0;
    CLIENT_MESSAGE_NICKNAME = 1;
    CLIENT_MESSAGE_MOUSEPOS = 2;
}

enum ServerMessageType {
    SERVER_MESSAGE_UNSPECIFIED = 0;
    SERVER_MESSAGE_BROADCAST = 1;
}

message ClientNickname {
    string nickname = 1;
}

message ClientMousePos {
    double x = 1;
    double y = 2;
}

message ClientMessage {
    ClientMessageType type = 1;
    oneof message {
        ClientNickname nickname = 2;
        ClientMousePos mousepos = 3;
    };
}

message ServerBroadcast {
    string clientIdent = 1;
    ClientMessage message = 2;
}

message ServerMessage {
    ServerMessageType type = 1;
    oneof message {
        ServerBroadcast broadcast = 2;
    }
}